# GPP

./: .gitmodules  README.markdown  gppqueue.c  gppqueue.h  meson.build  meson_options.txt  ppqueue.c  ppworker.c
doc/: gpp-sections.txt  meson.build  update_slate.sh
doc/example_docs/: ppclient.markdown  ppqueue.markdown  ppworker.markdown
doc/handwritten/: introduction.markdown
doc/markdown_doc_pages/: meson.build
doc/slate_markdown_doc_pages/: meson.build
examples/: meson.build  ppclient.c  ppqueue.c
examples/C/: meson.build  ppclient.c  ppworker.c
src/: gpp.h  gppclient.c  gppclient.h  gppqueue.c  gppqueue.h  gpputils.c  gpputils.h  gppworker.c  gppworker.h  meson.build
tools/: gppworker.h  meson.build  ppclient.c  ppworker.c
